로그인, 라우터, 환경변수 설정 및 임시 페이지 작성

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,9 @@
     "baseUrl": "./",
     "paths": {
       "@components/*": ["src/components/*"],
-      "@pages/*": ["src/pages/*"]
+      "@config/*": ["src/config/*"],
+      "@pages/*": ["src/pages/*"],
+      "@context/*": ["src/context/*"]
     }
   }
 }
