데이터처리, 포트폴리오 목업 작업중

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,7 +5,8 @@
       "@components/*": ["src/components/*"],
       "@config/*": ["src/config/*"],
       "@pages/*": ["src/pages/*"],
-      "@context/*": ["src/context/*"]
+      "@context/*": ["src/context/*"],
+      "@services/*": ["src/services/*"]
     }
   }
 }
