types, initData 수정

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -9,7 +9,7 @@
       "@services/*": ["src/services/*"],
       "@utils/*": ["src/utils/*"],
       "@types": ["src/types"],
-      "@constants": ["src/constants"]
+      "@initData": ["src/initData"]
     }
   }
 }
