--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "firebase": "^9.22.0",
+    "mui-color-input": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
