--- a/package.json
+++ b/package.json
@@ -30,7 +30,13 @@
     "build": "craco build",
     "test": "craco test",
     "deploy": "craco build && firebase deploy",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:dev": "REACT_APP_ENV=dev npm run _start",
+    "start:prod": "REACT_APP_ENV=prod npm run _start",
+    "deploy:dev": "REACT_APP_ENV=dev npm run _deploy",
+    "deploy:prod": "REACT_APP_ENV=prod npm run _deploy",
+    "_start": "sh -ac '. .env.${REACT_APP_ENV}; craco start'",
+    "_deploy": "sh -ac '. .env.${REACT_APP_ENV}; craco build && firebase use ${REACT_APP_ENV} && firebase deploy --only hosting:${REACT_APP_ENV}'"
   },
   "eslintConfig": {
     "extends": [
